--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "webpack-dev-server": "^4.1.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "5.14.0",
     "@popperjs/core": "^2.9.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "dotenv": "^10.0.0",
-    "firebase": "^9.0.1"
+    "firebase": "^8.2.0"
   }
 }
